Fix styles on mobile

--- a/js/src/styles/content.css
+++ b/js/src/styles/content.css
@@ -25,6 +25,12 @@ div.wrapper #content {
     height: 100%;
 }
 
+@media screen and (max-width: 480px) {
+    #content {
+        padding: 0.5rem 1rem;
+    }
+}
+
 @media (max-width: 992px) {
     .wrapper {
         flex-direction: column;
@@ -38,15 +44,9 @@ div.wrapper #content {
         flex: none;
     }
 
-    #content {
+    div.wrapper #content {
         flex: none;
         padding: 1rem;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    #content {
-        padding: 0.5rem 1rem;
     }
 }
 
